[skip ci] storybooks - Updating app storybooks/example/1009c1

--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,11 @@
     "apps": [
       {
         "name": "storybooks",
-        "headCommitId": "afe21223844c84783755f1f9331c947765674329",
-        "updatedAt": "2020-11-19T23:14:19.940Z",
-        "href": "storybooks/example/afe212",
-        "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/10"
+        "headCommitId": "1009c15e5c5eb3ff1f4314c672c8e3788e782801",
+        "updatedAt": "2022-01-15T17:56:19.621Z",
+        "href": "storybooks/example/1009c1",
+        "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/10",
+        "githubPagesUrl": "https://Sauloxd.github.io/saulo.dev/storybooks/example/1009c1"
       },
       {
         "name": "blog",
