--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     working_directory: ~/saulo.dev
     resource_class: small
     docker:
-      - image: circleci/node:12.14.1
+      - image: node
     steps:
       - checkout
       - restore_cache: # special step to restore the dependency cache
