[skip ci] - Updating branch example

--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,19 @@
     "apps": [
       {
         "name": "Design System",
-        "headCommitId": "b544974a83e9803f3816bbd413039c7aaef8ae31",
-        "updatedAt": "2022-03-16T13:45:38.674Z",
-        "href": "example/Design System/b54497",
+        "headCommitId": "7fc19757518de69dcee5f6920dcbcb78d6a91ab4",
+        "updatedAt": "2022-03-16T14:00:03.104Z",
+        "href": "example/Design System/7fc197",
         "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/10",
-        "githubPagesUrl": "https://Sauloxd.github.io/saulo.dev/example/Design System/b54497"
+        "githubPagesUrl": "https://Sauloxd.github.io/saulo.dev/example/Design System/7fc197"
       },
       {
         "name": "Blog",
-        "headCommitId": "b544974a83e9803f3816bbd413039c7aaef8ae31",
-        "updatedAt": "2022-03-16T13:45:38.674Z",
-        "href": "example/Blog/b54497",
+        "headCommitId": "7fc19757518de69dcee5f6920dcbcb78d6a91ab4",
+        "updatedAt": "2022-03-16T14:00:03.104Z",
+        "href": "example/Blog/7fc197",
         "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/10",
-        "githubPagesUrl": "https://Sauloxd.github.io/saulo.dev/example/Blog/b54497"
+        "githubPagesUrl": "https://Sauloxd.github.io/saulo.dev/example/Blog/7fc197"
       }
     ]
   }
