[skip ci] - Updating branch example

--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,22 @@
-{}
+{
+  "example": {
+    "apps": [
+      {
+        "name": "Design System",
+        "headCommitId": "c7b230dfdcbe75d05b6636d0f7ec67f3d2ce4f84",
+        "updatedAt": "2022-03-16T14:04:51.606Z",
+        "href": "example/Design System/c7b230",
+        "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/10",
+        "githubPagesUrl": "https://Sauloxd.github.io/saulo.dev/example/Design System/c7b230"
+      },
+      {
+        "name": "Blog",
+        "headCommitId": "c7b230dfdcbe75d05b6636d0f7ec67f3d2ce4f84",
+        "updatedAt": "2022-03-16T14:04:51.606Z",
+        "href": "example/Blog/c7b230",
+        "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/10",
+        "githubPagesUrl": "https://Sauloxd.github.io/saulo.dev/example/Blog/c7b230"
+      }
+    ]
+  }
+}
