--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -2,7 +2,6 @@
   "name": "@saulo.dev/blog",
   "version": "1.0.0",
   "description": "My blog :)",
-  "main": "index.js",
   "scripts": {
     "dev": "gatsby develop",
     "build": "gatsby build  --prefix-paths",
@@ -30,11 +29,17 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^6.1.0",
-    "concurrently": "^5.0.2",
-    "eslint-config-sxd": "1.0.5",
+    "@types/react-dom": "^17.0.13",
+    "@types/react-helmet": "^6.1.5",
+    "concurrently": "^7.0.0",
+    "eslint-config-sxd": "1.1.3",
     "gatsby-cli": "^2.8.22",
-    "gatsby-plugin-graphql-codegen": "^2.1.1"
+    "gatsby-plugin-graphql-codegen": "^2.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "eslint": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
+
 }
