--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   "description": "saulo.dev related projects :)",
   "author": "sauloxd <hello@saulo.dev>",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "resolutions": {
+    "immer": "^9.0.6",
+    "ansi-html": "0.0.8",
+    "ws": "^7.4.6",
+    "node-fetch": "^2.6.7",
+    "trim": "0.0.3"
+  }
 }
