--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -36,7 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "concurrently": "^7.1.0",
     "eslint": "^8.13.0",
-    "eslint-config-sxd": "1.1.3",
+    "eslint-config-sxd": "^1.1.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.4.0",
