--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,6 +26,9 @@
     "babel-preset-react-app": "^10.0.1",
     "concurrently": "^7.1.0",
     "dotenv": "^16.0.0",
-    "eslint-config-sxd": "^1.1.3"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-sxd": "^1.1.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2"
   }
 }
