--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
     working_directory: ~/saulo.dev
     resource_class: small
     docker:
-      - image: circleci/node:12.14.1
+      - image: node
     steps:
       - checkout
       - attach_workspace:
@@ -44,7 +44,7 @@ jobs:
   lint:
     working_directory: ~/saulo.dev
     docker:
-      - image: circleci/node:12.14.1
+      - image: node
     steps:
       - checkout
       - attach_workspace:
