--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
 
   build:
     working_directory: ~/saulo.dev
-    resource_class: medium
+    resource_class: large
     docker:
       - image: node
     steps:
